# memory-distiller

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: 01_mvp_scope.md  02_architecture.md  03_memory_model.md  04_prompt_pipeline.md  05_streamlit_ux.md  06_quality_and_testing.md  07_security_and_privacy.md  08_open_decisions.md  09_deepseek_provider.md  known_limitations.md  manual_test_checklist.md  usage.md
examples/: README.md  extractor_candidates.txt  memory_full_after.md  memory_full_before.md  memory_prompt.md  merge_plan.txt  synthetic_chat_log.md  validated_candidates.txt
infra/deploy/: README.md  deploy-memory-distiller.sh  github-actions.md
infra/nginx/: memory.bitschi.org.conf.example
memory_distiller/: app.py
memory_distiller/application/: __init__.py  compression_service.py  extraction_service.py  merge_applier.py  merge_service.py  models.py  pipeline_service.py  validation_service.py
memory_distiller/domain/: __init__.py  candidate.py  enums.py  errors.py  memory_entry.py  merge_plan.py
memory_distiller/io/: __init__.py  candidate_parser.py  enum_aliases.py  file_export.py  file_import.py  html_chat_import.py  memory_parser.py  memory_renderer.py  memory_writer.py  merge_plan_parser.py
memory_distiller/llm/: __init__.py  base.py  config.py  deepseek_client.py  errors.py  mock_client.py  models.py  pricing.py
memory_distiller/prompts/: __init__.py  render.py  templates.py
memory_distiller/ui/: components.py  (+4 more)
tests/: test_app_smoke.py
(+46 files in other folders)
