[project]
name = "memory-distiller"
version = "0.1.0"
description = "MVP for extracting reusable LLM memory from chat logs"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "coverage",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration_llm: marks tests that call real LLM APIs"]
